# dnasegnercrosstalk

./: CHANGELOG.md  M_li_speed.py  README.md  assignment_change.py  base_call_model_selection.py  bootstrap_M.py  calculate_inverse_matrix.py  center_dataframe.py  compare_matrices.py  compute_chastity.py  compute_purity.py  condition_number.py  config.py  crostalksenger.ipynb  crostalksengerexel.ipynb  deconvolve_domnisoru.py  deconvolve_nnls.py  detect_saturation.py  detrend.py  distance_crostalk.py  divide_matrices.py  divide_matrices_np.py  estimate_M_bootstrap.py  estimate_M_clusters_crostalk.py  estimate_M_correlation.py  estimate_M_from_clean_peaks.py  estimate_M_from_data.py  estimate_M_goodpeaks_crostalk.py  estimate_M_sklearn.py  estimate_M_yin.py  estimate_crosstalk_matrix.py  evaluate_quality.py  frobenius_delta.py  get_project_root.py  gram_schmidt.py  init_M_farthest.py  multiply_matrix_with_dataframe.py  normalize_diagonal.py  pyproject.toml  rank_filter.py  (+17 more)
results/excel/: srd_all_matrices.xlsx
обработанные SCF в Mutation Surveyor/обработанные SCF в Mutation Surveyor/: 2_pGEM_G2_PDMA6_36.ab1.fasta  2_pGEM_G2_PDMA6_36.ab1.scf  3_pGEM_B3_PDMA6_50.ab1.scf  3_pGEM_C3_PDMA6_50.ab1.scf  3_pGEM_D3_PDMA6_50.ab1.scf  3_pGEM_E3_PDMA6_50.ab1.scf  3_pGEM_F3_PDMA6_50.ab1.scf  4_pGEM_1_A2_PDMA6_50.ab1.scf  4_pGEM_1_B2_PDMA6_50.ab1.scf  4_pGEM_2_D2_PDMA6_50.ab1.scf  4_pGEM_3_E2_PDMA6_50.ab1.scf  4_pGEM_3_F2_PDMA6_50.ab1.scf  4_pGEM_4_G2_PDMA6_50.ab1.scf  4_pGEM_4_H2_PDMA6_50.ab1.scf  5_pGEM1_GenSeq_D4_PDMA6_36.ab1.scf  5_pGEM1_GenSeq_E4_PDMA6_36.ab1.scf  (+25 more)
(+107 files in other folders)
