[project]
name = "dnasegnercrosstalk"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "abifpy>=0.9",
    "biopython>=1.86",
    "fuzzy-c-means>=0.0.6",
    "ipympl>=0.10.0",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pybaselines>=1.2.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tqdm",
    "voila>=0.5.11",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "poethepoet",
    "wheel>=0.46.3",
]
